--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -52,7 +52,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.storyapp.ui.customView.MyEditText
                 android:id="@+id/et_password"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
