--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -34,7 +34,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_logo">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.storyapp.ui.customView.CustomEmailEditText
                 android:id="@+id/et_email"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-            <com.example.storyapp.ui.customView.MyEditText
+            <com.example.storyapp.ui.customView.CustomPasswordEditText
                 android:id="@+id/et_password"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
@@ -69,7 +69,7 @@
             android:text="@string/login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
 
         <LinearLayout
             android:id="@+id/ll_register"
