--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -35,7 +35,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_logo">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.storyapp.ui.customView.CustomEditText
                 android:id="@+id/et_name"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.example.storyapp.ui.customView.CustomEmailEditText
                 android:id="@+id/et_email"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
@@ -71,7 +71,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
-            <com.example.storyapp.ui.customView.MyEditText
+            <com.example.storyapp.ui.customView.CustomPasswordEditText
                 android:id="@+id/et_password"
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
@@ -88,7 +88,7 @@
             android:text="@string/register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/iv_loading"
