--- a/app/src/main/res/layout/fragment_insert.xml
+++ b/app/src/main/res/layout/fragment_insert.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,18 +15,19 @@
             android:id="@+id/cv_preview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_28dp"
+            app:cardCornerRadius="@dimen/space_12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="@dimen/space_28dp"
-            app:cardCornerRadius="@dimen/space_12dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/iv_preview"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_300dp"
+                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/ic_place_holder"
-                android:scaleType="centerCrop"/>
+                android:contentDescription="@string/images_preview" />
 
         </androidx.cardview.widget.CardView>
 
@@ -34,8 +35,8 @@
             android:id="@+id/btn_camera"
             android:layout_width="@dimen/space_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_28dp"
             android:layout_marginStart="@dimen/space_40dp"
+            android:layout_marginTop="@dimen/space_28dp"
             android:layout_marginEnd="@dimen/space_8dp"
             android:text="@string/camera"
             app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
@@ -72,12 +73,12 @@
                 style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="top|start"
                 android:hint="@string/caption"
                 android:inputType="textMultiLine"
                 android:lines="6"
-                android:gravity="top|start"
                 android:maxLines="8"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -95,17 +96,17 @@
             android:id="@+id/iv_loading"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/space_100dp"
+            android:layout_marginVertical="@dimen/space_16dp"
             android:scaleX="3"
             android:scaleY="3"
-            android:layout_marginVertical="@dimen/space_16dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_upload"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading_animation"
-            android:visibility="gone"/>
+            app:lottie_rawRes="@raw/loading_animation" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
