--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -1,16 +1,15 @@
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_story_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cv_story_item"
-    app:cardCornerRadius="@dimen/space_12dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
     android:layout_marginHorizontal="@dimen/space_16dp"
     android:layout_marginTop="@dimen/space_12dp"
-    android:layout_marginBottom="@dimen/space_4dp">
+    android:layout_marginBottom="@dimen/space_4dp"
+    app:cardCornerRadius="@dimen/space_12dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +20,8 @@
             android:id="@+id/iv_story_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/image_story" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -33,11 +33,11 @@
                 style="@style/TextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="@string/username_dummy"
                 android:textSize="@dimen/text_16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/username_dummy" />
 
             <TextView
                 android:id="@+id/tv_caption"
@@ -71,11 +71,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:textColor="@color/gray"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_username"
                 app:layout_constraintStart_toEndOf="@+id/tv_username"
                 app:layout_constraintTop_toTopOf="@+id/tv_username"
-                tools:text="@string/country_dummy"
-                android:visibility="invisible"/>
+                tools:text="@string/country_dummy" />
 
             <TextView
                 android:id="@+id/tv_date"
