feat(maps): Add maps support

--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/mapsNavigation"
+        android:icon="@drawable/baseline_map_24"
+        android:title="@string/menu_maps"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/settingsFragment"
         android:icon="@drawable/baseline_settings_24"
