feat(story): Add endless feature

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -58,7 +58,7 @@
         tools:layout="@layout/fragment_detail">
         <argument
             android:name="story_item"
-            app:argType="com.example.storyapp.domain.model.Story" />
+            app:argType="com.example.storyapp.data.local.entity.StoryEntity" />
     </fragment>
     <activity
         android:id="@+id/mapsNavigation"
